Added more content

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       
 <section>
       <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6"><a href="engineering.html"><button class="nav_button">Engineering</button></a></div>
-          <div class="col-xs-6 col-sm-6 col-md-6"><a href="photography.html"><button class="nav_button">Photography</button></a></div>
+          <div class="col-sm-6 col-md-6 col-center"><a href="engineering.html"><button class="nav_button">Engineering</button></a></div>
+          <div class="col-sm-6 col-md-6 col-center"><a href="photography.html"><button class="nav_button">Photography</button></a></div>
         </div>
 </section>
       
