--- a/photography.html
+++ b/photography.html
@@ -20,6 +20,14 @@
 
   <body>
 
+      <div class="container-fluid">
+      <div id="photography-nav" class="row">
+          <div class="col-xs-4 col-md-4 col-center"><button type="button" class="btn btn-link nav_link">Overview</button></div>
+          <div class="col-xs-4 col-md-4 col-center"><button type="button" class="btn btn-link nav_link">Vancouver</button></div>
+          <div class="col-xs-4 col-md-4 col-center"><button type="button" class="btn btn-link nav_link">Japan</button></div>
+      </div>
+      </div>
+      
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
