Fixed the carousel swiping on mobile with scrollspy working

--- a/engineering.html
+++ b/engineering.html
@@ -15,7 +15,6 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/carousel.css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 
   </head>
 
@@ -154,9 +153,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/js/jquery.mobile.custom.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="/js/sidenav.js"></script>
   </body>
 </html>
