--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-
+    <div class="container">
       <div class="container-fluid">
       <div id="photography-nav" class="row">
           <div class="col-xs-4 col-md-4 col-center"><button type="button" class="btn btn-link nav_link">Overview</button></div>
@@ -27,7 +27,6 @@
           <div class="col-xs-4 col-md-4 col-center"><button type="button" class="btn btn-link nav_link">Japan</button></div>
       </div>
       </div>
-      
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -56,11 +55,14 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div><!-- /.carousel -->
+          </div><!-- /.carousel --></div>
 <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/js/jquery.mobile.custom.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/sidenav.js"></script>
+  </body>
   </body>
 </html>
