Added link to Fancy Feast Price Checker

--- a/engineering.html
+++ b/engineering.html
@@ -49,7 +49,7 @@
         
         <div id="AmazonPriceChecker" class="project-descriptions">
             <section class="group">
-                <h3>Amazon Price Checker</h3>
+                <h3><a href="http://fancyfeast.2016.angularattack.io/home">Amazon Price Checker</a></h3>
                 <p>
                     <b>Team members:</b> Tim Cheung, David Dang, David Wong <br>
                     <b>Duration of project:</b> May 14-15, 2016<br>
@@ -63,7 +63,7 @@
                     <i><b>Built with</b></i>
                     <ul>
                         <li>Digital Ocean server hosting a Node JS amazon product api client, running on Koa.</li>
-                        <li>This starter pack https://github.com/antonybudianto/angular2-starter, which includes Angular 2, SystemJS, Gulp, and Bootstrap</li>
+                        <li><a href="https://github.com/antonybudianto/angular2-starter">This starter pack</a>, which includes Angular 2, SystemJS, Gulp, and Bootstrap</li>
                     </ul>
                 </p>
             
