Shortened Clefairy Says for better mobile viewing

--- a/engineering.html
+++ b/engineering.html
@@ -37,7 +37,7 @@
                 <a href="#SunlightPositionSimulator">Sunlight Position Simulator</a>
             </li>
             <li>
-                <a href="#ClefairyGame">Clefairy Says using an Accelerometer</a>
+                <a href="#ClefairyGame">Clefairy Says</a>
             </li>
             <li>
                 <a href="#UVLightFixture">UV Light Fixture</a>
