--- a/engineering.html
+++ b/engineering.html
@@ -48,6 +48,61 @@
             <!--Main Content -->
             <div class="col-xs-9">
 
+                <div id="LazerMaze" class="project-descriptions">
+                    <section class="group">
+                        <h3><a href="http://fancyfeast.2016.angularattack.io/home">Lazer Maze</a></h3>
+                        <p>
+                            <b>Team members:</b> David Dang, Tobias Rojahn, David Wong
+                            <br>
+                            <b>Duration of project:</b> February 15-17, 2019
+                            <br>
+                            <br>
+                            <i><b>Introduction</b></i> - This game was developed for the <a href="https://app.hackhub.com/event/bcgj19/">BC Game Jam 2019</a>. 
+                            <br>
+                            <br>
+                            <i><b>Project URLs</b></i>
+                            <ul>
+                                <li><a href=https://app.hackhub.com/event/bcgj19/teams/submissions>BC Game Jam 2019 Hackhub Submission</a></li>
+                                <li><a href=https://cloudboy.iv-dev.de/play.php?game=LazerMaze></a>Online Game Boy simulator with Lazer Maze</li>
+                                <li><a href=https://github.com/MasterIV/LazerMaze></a>GitHub repository</li>
+                            </ul>
+                        </p>
+
+                        <div class="container-fluid">
+                            <!-- Carousel
+                ================================================== -->
+                            <div id="lazerMazeCarousel" class="carousel slide carousel-max-width" data-interval="false">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#lazerMazeCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#lazerMazeCarousel" data-slide-to="1"></li>
+                                    <li data-target="#lazerMazeCarousel" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <img class="first-slide" src="/images/lazer_maze/start_screen.JPG" alt="First slide">
+                                    </div>
+                                    <div class="item">
+                                        <img class="second-slide" src="/images/lazer_maze/level_one.JPG" alt="Second slide">
+                                    </div>
+                                    <div class="item">
+                                        <img class="third-slide" src="/images/lazer_maze/level_five.JPG" alt="Third slide">
+                                    </div>
+                                </div>
+                                <a class="left carousel-control" href="#lazerMazeCarousel" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#lazerMazeCarousel" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <!-- /.carousel -->
+                        </div>
+                    </section>
+                </div>
+
                 <div id="AmazonPriceChecker" class="project-descriptions">
                     <section class="group">
                         <h3><a href="http://fancyfeast.2016.angularattack.io/home">Amazon Price Checker</a></h3>
