Fixed left side bar and links

--- a/engineering.html
+++ b/engineering.html
@@ -29,6 +29,9 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="#LazerMaze">Lazer Maze</a>
+                    </li>
+                    <li>
                         <a href="#AmazonPriceChecker">Amazon Price Checker</a>
                     </li>
                     <li>
@@ -63,8 +66,8 @@
                             <i><b>Project URLs</b></i>
                             <ul>
                                 <li><a href=https://app.hackhub.com/event/bcgj19/teams/submissions>BC Game Jam 2019 Hackhub Submission</a></li>
-                                <li><a href=https://cloudboy.iv-dev.de/play.php?game=LazerMaze></a>Online Game Boy simulator with Lazer Maze</li>
-                                <li><a href=https://github.com/MasterIV/LazerMaze></a>GitHub repository</li>
+                                <li><a href=https://cloudboy.iv-dev.de/play.php?game=LazerMaze>Online Game Boy simulator with Lazer Maze</a></li>
+                                <li><a href=https://github.com/MasterIV/LazerMaze>GitHub repository</a></li>
                             </ul>
                         </p>
 
