Added missing description to lazer maze

--- a/engineering.html
+++ b/engineering.html
@@ -63,6 +63,14 @@
                             <i><b>Introduction</b></i> - This game was developed for the <a href="https://app.hackhub.com/event/bcgj19/">BC Game Jam 2019</a>. 
                             <br>
                             <br>
+                            <i><b>Description</b></i> - Lazer Maze is a small puzzle game about laser energy transmission. 
+                            Use the objects in the level to guide the laser from the generator to the receivers. 
+                            But be careful to not hit a mine. A game developed for GameBoy. Play it on the real hardware or the emulator of your choice!
+                            <br>
+                            <br>
+                            Selected for the Audience Choice award and Volunteer Choice award.
+                            <br>
+                            <br>
                             <i><b>Project URLs</b></i>
                             <ul>
                                 <li><a href=https://app.hackhub.com/event/bcgj19/teams/submissions>BC Game Jam 2019 Hackhub Submission</a></li>
