--- a/engineering.html
+++ b/engineering.html
@@ -53,7 +53,7 @@
 
                 <div id="LazerMaze" class="project-descriptions">
                     <section class="group">
-                        <h3><a href="http://fancyfeast.2016.angularattack.io/home">Lazer Maze</a></h3>
+                        <h3><a href="https://cloudboy.iv-dev.de/play.php?game=LazerMaze">Lazer Maze</a></h3>
                         <p>
                             <b>Team members:</b> David Dang, Tobias Rojahn, David Wong
                             <br>
