Added a link to the old portfolio page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <li class="page-subheader" ng-class="{ active: $route.current.activetab == 'about'  }">
                             <a href="#/about/">About</a>
                         </li>
+                        <li class="page-subheader"">
+                            <a href="engineering.html">Archive</a>
+                        </li>
                     </ul>
                 </div>
             </div>
