--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <li class="page-subheader" ng-class="{ active: $route.current.activetab == 'projects' }">
                             <a href="#/projects/">Projects <span class="sr-only">(current)</span></a>
                         </li>
+                        <li class="page-subheader">
+                            <a href="./sportify/index.html">Sportify</a>
+                        </li>
                         <li class="page-subheader" ng-class="{ active: $route.current.activetab == 'photography'  }">
                             <a href="#/photography/">Photography</a>
                         </li>
