Add assignment tracker

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         <li class="page-subheader">
                             <a href="./sportify/index.html">Sportify</a>
                         </li>
+                        <li class="page-subheader">
+                            <a href="./assignment-tracker/index.html">Assignment Tracker</a>
+                        </li>
                         <li class="page-subheader" ng-class="{ active: $route.current.activetab == 'photography'  }">
                             <a href="#/photography/">Photography</a>
                         </li>
