--- a/404.html
+++ b/404.html
@@ -1,1 +1,2 @@
-window.location.replace("http://davidgwong.github.io");
+<meta http-equiv="refresh" content="0; URL=https://davidgwong.github.io" />
+404: Page does not exist. <a href="https://davidgwong.github.io">Click here if the page does not redirect.</a>
